[project]
name = "langgraph-job-analyst"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "langchain-community>=0.4.1",
  "langchain-core>=1.4.0",
  "langchain-ollama>=1.1.0",
  "langchain-tavily>=0.2.18",
  "langgraph>=1.2.0",
  "mlflow>=3.12.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.6.0",
  "structlog>=25.5.0",
]

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]
